--- a/index.html
+++ b/index.html
@@ -1,7 +1,158 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Marty Reynoldson</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico"/>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
+  </head>
+  <body>
+    <header class="light-type">
+      <nav class="navbar navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="">Marty Reynoldson</a>
+          </div>
+          <div class="collapse navbar-collapse" id="navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#about">About</a></li>
+              <li><a href="#work">Work</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+	  
+      <div class="container text-center">
+	  <div class="row">
+    	  <div align="center" class="col-md-6 col-xs-3" >
+    	  	   <img class="img-circle img-thumbnail" src="img/Untitled.jpeg"/>
+    	  </div>
+          <div class="col-md-6 col-xs-9" >		
+            <h1 >Hi there, I'm Marty!</h1>
+  		  <h2 class="hidden-xs">Software Engineer</h2>
+            <div class="social-links">
+              <ul class="list-inline">
+                <li><a href="https://www.linkedin.com/in/martyreynoldson">LinkedIn</a></li>
+                <li><a href="https://github.com/martyreynoldson">Github</a></li>
+              </ul>
+            </div>
+          </div>
+		</div>
+    </header>
+
+    <section class="about dark-type" id="about">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+            <h2>About me</h2>
+            <h4>
+              I am software engineer at RBS and I live in London.
+            </h4>
+            <a href="https://github.com/martyreynoldson">
+              <button class="btn btn-dark">Checkout My Github</button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="blue-project dark-type" id="work">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+            <h2>Royal Bank of Scotland (Aug 2015 - Present)</h2>
+            <h4>
+              Front-office software engineer for RBS's investment banking arm - NatWest Markets.
+            </h4>
+            <p>
+              Key projects include: <br>
+Client Meetings Monitor - Designed and implemented an Outlook add-in that tracks client meeting activity. This saw huge adoption by teams worldwide in both primary and secondary markets.<br>
+Client Meetings MI - Created a VSTO C# solution which uses ‘Client Meetings Monitor’ data to produce colour-coded reports. The ‘Client Meetings’ solution became a key contributor to client relations metrics.<br>
+Syndicate Dashboard - Used AngularJS, NodeJS and C# to migrate legacy solutions into a single web-based application. This application hosts primary markets deal-related information and documentation.<br>
+Investor Feed - Implemented a Windows Service that communicates with various internal systems and uses object comparisons to synchronize golden source counterparty static with RBS’s ‘book building’ application.<br>
+Deal Monitor - Created a C# Excel add-in solution that verifies impartial bond allocation, flags orders that break selling restrictions and processes sales credits based on performance.
+			      </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="gray-project light-type text-right">
+      <div class="container">
+        <div class="row">          
+          <div class="col-md-8 col-md-offset-2">
+            <h2>DemoPad Ltd.(Jan 2015 – Mar 2015)</h2>
+            <h4>
+              Created software to extend DemoPad's smart home automation environment and capabilities.
+            </h4>
+            <p>
+              Key highlights:<br>
+Device Drivers - Implemented device drivers in Lua to integrate lighting (Rako) and thermostat (Nest) control with DemoPad’s flagship smart home automation processor – Centro8.<br>
+Apple Watch App - Designed and implemented an Apple Watch application to leverage Centro8’s smarthome control and feedback capabilities.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="orange-project light-type">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+            <h2>KitckPack Ltd. (Aug 2014 – Sep 2014)</h2>
+            <h4>
+              Provided technical expertise to owners of KitchPack Ltd – a company that sells kitchenware equipment to University students
+            </h4>
+            <p>
+Key highlights:<br>
+Marketing Strategy - Discussed potential solutions with the owners to improve company awareness.<br>
+Web Scraping - Used Scrapy/Python scripts to accomplish the agreed marketing strategy. <br>Implementation saw sales increase by 35% over the first month and a noticeable increase in feedback via social media.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="learning dark-type">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+            <h2>Lancaster University - InfoLab21 Knowledge Business Centre</h2>
+            <h4>
+              EU-Funded project that promotes growth of small to medium-sized business in the north-west of England.
+            </h4>
+            <p>
+              Key highlights:<br>
+Consultation. Worked closely with clients to scope their requirements into manageable projects and meet
+specific design and implementation needs.<br>
+Twitter Report Generator. Created a bespoke web application with PHP/Laravel. This generated progress
+reports based on the client’s customers’ Twitter activity e.g. tweets, retweets, followers etc.
+
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact light-type" id="contact">
+      <div class="container text-center">
+        <h2>Email me<a href="mailto:martyreynoldson@gmail.com">here</a> </h2>
+      </div>
+    </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  </body>
 </html>
