Add titles to lang/tech items
Added title attribute to each image in languages section

--- a/index.html
+++ b/index.html
@@ -183,66 +183,66 @@
      <section class="languages" id="languages">
                <br><br>
         <div class="container wow fadeInUp" data-wow-delay="0.2s">
-            <h2 class="h2_heading">Languages I've Worked With</h2>
+            <h2 class="h2_heading">Languages/Tech I've Worked With</h2>
             <hr class="small">
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/csharp.png" class="hvr-grow tech"> 
+                      <img src="img/csharp.png" class="hvr-grow tech" title="C#"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/angularjs.png" class="hvr-grow tech"> 
+                      <img src="img/angularjs.png" class="hvr-grow tech" title="AngularJS"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/nodejs.png" class="hvr-grow tech"> 
+                      <img src="img/nodejs.png" class="hvr-grow tech" title="NodeJS"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/java.png" class="hvr-grow tech"> 
+                      <img src="img/java.png" class="hvr-grow tech" title="Java"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div width ="100">
-                      <img src="img/python.png" class="hvr-grow tech"> 
+                      <img src="img/python.png" class="hvr-grow tech" title="Python"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/html.png" class="hvr-grow tech"> 
+                      <img src="img/html.png" class="hvr-grow tech" title="HTML5"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/javascript.png" class="hvr-grow tech"> 
+                      <img src="img/javascript.png" class="hvr-grow tech" title="JavaScript"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/android.png" class="hvr-grow tech"> 
+                      <img src="img/android.png" class="hvr-grow tech" title="Android"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/lua.png" class="hvr-grow tech"> 
+                      <img src="img/lua.png" class="hvr-grow tech" title="Lua"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/sql.png" class="hvr-grow tech"> 
+                      <img src="img/sql.png" class="hvr-grow tech" title="SQL"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/dotnet.png" class="hvr-grow tech"> 
+                      <img src="img/dotnet.png" class="hvr-grow tech" title=".NET"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/cakephp.png" class="hvr-grow tech"> 
+                      <img src="img/cakephp.png" class="hvr-grow tech" title="PHP"> 
                     </div>   
                 </div>
         </div>
