--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="https://www.linkedin.com/in/martyreynoldson" class="hvr-grow">
               <img src="img/linkedin.png" title="LinkedIn" style="width:50px;height:50px;margin:5px">
             </a>
-            <a href="assets/marty_reynoldson.pdf" class="hvr-grow">
+            <a href="assets/Marty_Reynoldson.pdf" class="hvr-grow">
               <img src="img/resume.png" title="Resume" style="width:50px;height:50px;margin:5px">
             </a>
             <a href="https://www.github.com/martyreynoldson" class="hvr-grow">
