Minor text fixes
Text changes to about me

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
              <h2 class="h2_heading">About</h2>
              <hr class="small">
 
-              <p style="font-size:26px">Hi! My name is Marty and I am a software engineer. In 2015, I graduated from Lancaster University with a Masters in a Computer Science. Shortly after, I took a software engineering position at RBS. Specifically, I work in the fixed income space (front office) within RBS’s investment banking division – NatWest Markets. In my spare time, I enjoy working on personal projects, listening to software podcasts and reading about technology.</p>
+              <p style="font-size:26px">Hi, my name is Marty and I live in London, England. In 2015, I graduated from Lancaster University with a Masters in Computer Science. Since then, I have been working as a software engineer at RBS. Specifically, I work in the fixed income space (front office) within RBS’s investment banking division – NatWest Markets.</p>
         </div>
         <br><br>
     </section>
