--- a/index.html
+++ b/index.html
@@ -76,11 +76,20 @@
          <div class="experience-area hvr-grow">     
             <div class="row wow fadeInLeft experience-section" data-wow-delay="0.4s">
                 <div class="col-md-5">
-                    <img class="img experience-icon" src="img/rbs.jpg" alt="">
+                    <img src="img/rbs.jpg" style="padding-top:20%" alt="Royal Bank of Scotland">
                 </div>
                 <div class="col-md-7 experience-description">
                     <h3>Royal Bank of Scotland (Aug 2015 - Present)</h3>
-                    <p class="experience-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+                    <p class="experience-text" style="text-align:center"><strong>Front-office software engineer for RBS's investment banking arm - NatWest Markets.</strong><p/>
+                      <p class="experience-text">
+                      <strong>Client Meetings Monitor</strong> - Designed and implemented an Outlook add-in that tracks client meeting activity. This saw huge adoption by teams worldwide in both primary and secondary markets.</p>
+                      <p class="experience-text">
+                      <strong>Syndicate Dashboard</strong> - Used AngularJS, NodeJS and C# to migrate legacy solutions into a single web-based application. This application hosts primary markets deal-related information and documentation.</p>
+                      <p class="experience-text">
+                      <strong>Investor Feed</strong> - Implemented a Windows Service that communicates with various internal systems and uses object comparisons to synchronize golden source counterparty static with RBS’s ‘book building’ application.</p>
+                      <p class="experience-text">
+                      <strong>Deal Monitor</strong> - Created a C# Excel add-in solution that verifies impartial bond allocation, flags orders that break selling restrictions and processes sales credits based on performance.
+                      </p>
                 </div>
             </div>
        </div>
@@ -89,7 +98,10 @@
           <div class="row wow fadeInRight experience-section" data-wow-delay="0.4s">
               <div class="col-md-7 experience-description">
                   <h3>DemoPad Ltd. (Jan 2015 - Mar 2015)</h3>
-                  <p class="experience-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+                  <p class="experience-text" style="text-align:center;">
+                    <strong>Created software to extend DemoPad's smart home automation environment and capabilities.</strong>
+                    <p class="experience-text"><strong>Device Drivers</strong> - Implemented device drivers in Lua to integrate lighting (Rako) and thermostat (Nest) control with DemoPad’s flagship smart home automation processor – Centro8.
+                    <p class="experience-text"><strong>Apple Watch App</strong> - Designed and implemented an Apple Watch application to leverage Centro8’s smarthome control and feedback capabilities.</p>
               </div>
               <div class="col-md-5">
                   <img class="img experience-icon" src="img/demopad.png" alt="">
@@ -101,7 +113,9 @@
           <div class="row wow fadeInRight experience-section" data-wow-delay="0.4s">
               <div class="col-md-7 experience-description">
                   <h3>KitchPack Ltd. (Aug 2014 - Sep 2014)</h3>
-                  <p class="experience-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+                  <p class="experience-text" style="text-align:center"><strong>Provided technical expertise to owners of KitchPack Ltd – a company that sells kitchenware equipment to University students</strong></p>
+                  <p class="experience-text"><strong>Marketing Strategy</strong> - Discussed potential solutions with the owners to improve company awareness.</p>
+                  <p class="experience-text"><strong>Web Scraping</strong> - Used Scrapy/Python scripts to accomplish the agreed marketing strategy. Implementation saw sales increase by 35% over the first month and a noticeable increase in feedback via social media.</p>
               </div>
               <div class="col-md-5">
                   <img class="img experience-icon" src="img/kitchpack.png" alt="">
@@ -116,7 +130,11 @@
               </div>
               <div class="col-md-7 experience-description">
                   <h3>Lancaster University InfoLab21: Knowledge Business Centre (July 2014 - Sep 2014)</h3>
-                  <p class="experience-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+                  <p class="experience-text" style="text-align:center"><strong>EU-Funded project that promotes growth of small to medium-sized business in the north-west of England.</strong></p>
+                  <p class="experience-text"><strong>Consultation</strong> - Worked closely with clients to scope their requirements into manageable projects and meet
+specific design and implementation needs.</p>
+                  <p class="experience-text"><strong>Twitter Report Generator</strong> - Created a bespoke web application with PHP/Laravel. This generated progress
+reports based on the client’s customers’ Twitter activity e.g. tweets, retweets, followers etc.</p>
               </div>
           </div>
         </div>
