Use interactice banner
Added particle.js to banner

--- a/index.html
+++ b/index.html
@@ -1,60 +1,55 @@
 <!Doctype HTML>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="author" content="Marty J. Reynoldson" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-        <meta charset="utf-8">
+
     <title>Marty J. Reynoldson</title>
     <link rel="icon" href="img/me4.jpg">
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
     <link href="css/animate.css" rel="stylesheet">
-  
-  <!-- Magnific Popup core CSS file -->
-  <link rel="stylesheet" href="css/magnific-popup.css"> 
-  
-  <script src="js/modernizr-2.8.3.min.js"></script>  <!-- Modernizr /-->
 </head>
 
 <body> 
  <div id="preloader">
     <div id="status"></div>
   </div>
-<!-- FullScreen -->
-    <div class="intro-header">
-      <div class="col-xs-12 text-center">
+
+      <div class="intro-header">
         <br>
         <h1 class="h1_home wow fadeIn" data-wow-delay="0.2s">Marty J. Reynoldson</h1>
         <h2 class="h2_heading wow fadeIn" data-wow-delay="0.4s">Software Engineer</h2>
         <div class="wow fadeIn" data-wow-delay="0.6s">
           <img src="img/me4.jpg" class="img-circle"> 
         </div>
-        <div class="wow fadeIn" data-wow-delay="0.8s" style="padding:50px 75px 50px 75px; font-size:20px;">
+        <div class="wow fadeIn" data-wow-delay="0.8s" style="padding:30px 75px 50px 75px; font-size:20px;">
             <a href="https://www.linkedin.com/in/martyreynoldson" class="hvr-grow">
-              <img src="img/linkedin.png" title="LinkedIn" style="width:50px;height:50px;margin:5px">
+              <img src="img/linkedin.png" title="LinkedIn" style="width:40px;height:40px;margin:5px">
             </a>
             <a href="assets/Marty_Reynoldson.pdf" class="hvr-grow">
-              <img src="img/resume.png" title="Resume" style="width:50px;height:50px;margin:5px">
+              <img src="img/resume.png" title="Resume" style="width:40px;height:40px;margin:5px">
             </a>
             <a href="https://www.github.com/martyreynoldson" class="hvr-grow">
-              <img src="img/github_black.png" title="Github" style="width:50px;height:50px;margin:5px">
+              <img src="img/github_black.png" title="Github" style="width:40px;height:40px;margin:5px">
             </a>
             <a href="https://www.facebook.com/mjreynoldson" class="hvr-grow">
-              <img src="img/facebook-icon-preview-1.png" title="Facebook" style="width:50px;height:50px;margin:5px">
+              <img src="img/facebook-icon-preview-1.png" title="Facebook" style="width:40px;height:40px;margin:5px">
             </a>          
-
           </div>
-      </div>    
-          <!-- /.container -->
-      <div class="col-xs-12 text-center abcen wow fadeIn" data-wow-delay="1.0s">
-        <div class="button_down"> 
-          <a class="imgcircle wow bounceInUp" href="#about"> <img class="img_scroll" src="img/arrow_down.png" alt=""> </a>
-        </div>
       </div>
+
+<div id="particles-js"></div>
+
+  <div class="col-xs-12 text-center abcen wow fadeIn" data-wow-delay="1.0s">
+    <div class="button_down"> 
+      <a class="imgcircle wow bounceInUp" href="#about"> <img class="img_scroll" src="img/arrow_down.png" alt=""> </a>
     </div>
+  </div>
+
+
 
    <section class="about-me" id="about">
          <br><br>
@@ -291,31 +286,15 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
    </footer>
 
 </body>
-    <!-- JavaScript -->
     <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.js"></script>
-  <script src="js/owl.carousel.js"></script>
-  <script src="js/script.js"></script>
-  <!-- StikyMenu -->
-  <script src="js/stickUp.min.js"></script>
-  <script type="text/javascript">
-    jQuery(function($) {
-    $(document).ready( function() {
-      $('.navbar-default').stickUp();
-      
-    });
-    });
-  
-  </script>
-  <!-- Smoothscroll -->
-  <script type="text/javascript" src="js/jquery.corner.js"></script> 
+    <script src="js/script.js"></script>
   <script src="js/wow.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+
   <script>
    new WOW().init();
   </script>
-  <script src="js/classie.js"></script>
-  <script src="js/uiMorphingButton_inflow.js"></script>
-  <!-- Magnific Popup core JS file -->
-  <script src="js/jquery.magnific-popup.js"></script> 
+  <script src="js/particles.js"></script>
+  <script src="js/app.js"></script>
 
 </html>
