--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8">
     <meta name="author" content="Marty J. Reynoldson" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-
-    <title>Marty J. Reynoldson</title>
+    <title>Marty Reynoldson</title>
     <link rel="icon" href="img/me4.jpg">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
     <link href="css/animate.css" rel="stylesheet">
 </head>
@@ -41,7 +40,7 @@
           </div>
       </div>
 
-<div id="particles-js"></div>
+  <div id="particles-js"></div>
 
   <div class="col-xs-12 text-center abcen wow fadeIn" data-wow-delay="1.0s">
     <div class="button_down"> 
@@ -71,7 +70,7 @@
          <div class="experience-area hvr-grow">     
             <div class="row wow fadeInLeft experience-section" data-wow-delay="0.4s">
                 <div class="col-md-5">
-                    <img src="img/rbs.jpg" style="padding-top:20%" alt="Royal Bank of Scotland">
+                    <img src="img/rbs.jpg" style="width:405px; height:130; padding-top:20%" alt="">
                 </div>
                 <div class="col-md-7 experience-description">
                     <h3>Royal Bank of Scotland (Aug 2015 - Present)</h3>
@@ -83,8 +82,7 @@
                       <p class="experience-text">
                       <strong>Investor Feed</strong> - Implemented a Windows Service that communicates with various internal systems and uses object comparisons to synchronize golden source counterparty static with RBS’s ‘book building’ application.</p>
                       <p class="experience-text">
-                      <strong>Deal Monitor</strong> - Created a C# Excel add-in solution that verifies impartial bond allocation, flags orders that break selling restrictions and processes sales credits based on performance.
-                      </p>
+                      <strong>Deal Monitor</strong> - Created a C# Excel add-in solution that verifies impartial bond allocation, flags orders that break selling restrictions and processes sales credits based on performance.</p>
                 </div>
             </div>
        </div>
@@ -106,37 +104,34 @@
 
         <div class="experience-area hvr-grow">     
           <div class="row wow fadeInRight experience-section" data-wow-delay="0.4s">
+              <div class="col-md-5">
+                  <img class="img" style="width:348px; height:165; padding-top:10%" src="img/kitchpack.png" alt="">
+              </div>
               <div class="col-md-7 experience-description">
                   <h3>KitchPack Ltd. (Aug 2014 - Sep 2014)</h3>
-                  <p class="experience-text" style="text-align:center"><strong>Provided technical expertise to owners of KitchPack Ltd – a company that sells kitchenware equipment to University students</strong></p>
+                  <p class="experience-text" style="text-align:center"><strong>Provided technical expertise a company that sells household goods to University students</strong></p>
                   <p class="experience-text"><strong>Marketing Strategy</strong> - Discussed potential solutions with the owners to improve company awareness.</p>
                   <p class="experience-text"><strong>Web Scraping</strong> - Used Scrapy/Python scripts to accomplish the agreed marketing strategy. Implementation saw sales increase by 35% over the first month and a noticeable increase in feedback via social media.</p>
-              </div>
-              <div class="col-md-5">
-                  <img class="img experience-icon" src="img/kitchpack.png" alt="">
               </div>
           </div>
         </div>
 
         <div class="experience-area hvr-grow">     
           <div class="row wow fadeInLeft experience-section" data-wow-delay="0.4s">
-              <div class="col-md-5">
-                  <img class="img experience-icon" src="img/infolab-lancaster-university.png" alt="">
-              </div>
               <div class="col-md-7 experience-description">
                   <h3>Lancaster University InfoLab21: Knowledge Business Centre (July 2014 - Sep 2014)</h3>
-                  <p class="experience-text" style="text-align:center"><strong>EU-Funded project that promotes growth of small to medium-sized business in the north-west of England.</strong></p>
+                  <p class="experience-text" style="text-align:center"><strong>EU-Funded project that promotes growth of small to medium-sized business NW-England.</strong></p>
                   <p class="experience-text"><strong>Consultation</strong> - Worked closely with clients to scope their requirements into manageable projects and meet
 specific design and implementation needs.</p>
                   <p class="experience-text"><strong>Twitter Report Generator</strong> - Created a bespoke web application with PHP/Laravel. This generated progress
 reports based on the client’s customers’ Twitter activity e.g. tweets, retweets, followers etc.</p>
               </div>
+              <div class="col-md-5">
+                  <img class="img experience-icon" src="img/infolab-lancaster-university.png" alt="">
+              </div>
           </div>
         </div>
-
         </div>
-
-
                 <br><br>
 
     </section>
@@ -145,21 +140,21 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
               <br><br>
             <div class="row wow fadeInUp" data-wow-delay="0.2s">
                 <div class="col-lg-10 col-lg-offset-1 text-center wow fadeInUp">
-                    <h2 class="h2_heading">Side Projects</h2>
+                    <h2 class="h2_heading">Projects</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
                           <div class="portfolio-box">
-                              <a title="Title" href="http://www.infosys.com/">
-                                  <img class="img-portfolio img-responsive" src="img/csharp.png" style="opacity: 0.5;">
-                                  <p class="imagetext">   </p>
+                              <a>
+                                  <img class="img-portfolio img-responsive" src="img/twitter.png" style="opacity: 0.5;">
                                   <div class="portfolio-box-caption">
                                       <div class="portfolio-box-caption-content">
                                           <div class="project-category text-faded">
-                                            
+                                              Twitter Report Generator
                                           </div>
                                           <div class="project-name">
-                                              Under Construction
+                                              Bespoke web application created with PHP/Laravel. This generates progress
+reports based on the client’s customers’ Twitter activity e.g. tweets, retweets, followers etc.
                                           </div>
                                       </div>
                                   </div>
@@ -169,16 +164,15 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
 
                       <div class="col-md-6">
                           <div class="portfolio-box">
-                              <a title="Title" href="http://www.infosys.com/">
-                                  <img class="img-portfolio img-responsive" src="img/csharp.png" style="opacity: 0.5;">
-                                  <p class="imagetext">  </p>
+                              <a>
+                                  <img class="img-portfolio img-responsive" src="img/scrapy.png" style="opacity: 0.5;">
                                   <div class="portfolio-box-caption">
                                       <div class="portfolio-box-caption-content">
                                           <div class="project-category text-faded">
-                                            
+                                             Automated Spear-phishing System 
                                           </div>
                                           <div class="project-name">
-                                              Under Construction
+                                              Designed and implemented a system that crafted spear-phishing email messages based on publicly available information to validate effectiveness.
                                           </div>
                                       </div>
                                   </div>
@@ -196,7 +190,7 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
      <section class="languages" id="languages">
                <br><br>
         <div class="container wow fadeInUp" data-wow-delay="0.2s">
-            <h2 class="h2_heading">Languages/Tech I've Worked With</h2>
+            <h2 class="h2_heading">Technologies I've Used</h2>
             <hr class="small">
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
@@ -265,8 +259,8 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
      <footer id="footer">
                <br><br>
   <div class="container wow fadeInUp"  data-wow-delay="0.2s">
-             <h2 class="h2_heading">Hit Me Up!</h2><br>
-             <p style="font-size:26px">Reach out to me at 
+             <h2 class="h2_heading">Contact Me</h2><br>
+             <p style="font-size:26px">You can reach me at 
               <a href="mailto:martyreynoldson@gmail.com" style="color:white"><strong>martyreynoldson@gmail.com</strong></a>!
                 </p>
           <a class="body-text" href="https://www.linkedin.com/in/martyreynoldson" style="color:white;">
@@ -281,20 +275,16 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
           <a class="body-text" href="https://www.facebook.com/mjreynoldson" style="color:white">
             Facebook
           </a>
-<br><br><br>
-                  <small>Marty Reynoldson &copy; 2017</small>
+        <br><br><br>
+        <small>Marty Reynoldson &copy; 2017</small>
    </footer>
-
 </body>
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/script.js"></script>
+  <script src="js/jquery-1.10.2.js"></script>
   <script src="js/wow.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-
+  <script src="js/bootstrap.js"></script>
   <script>
    new WOW().init();
   </script>
   <script src="js/particles.js"></script>
   <script src="js/app.js"></script>
-
 </html>
