Update Twitter logo
Capitalization was causing loading issues

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
                         <div class="col-md-6">
                           <div class="portfolio-box">
                               <a>
-                                  <img class="img-portfolio img-responsive" src="img/twitter.png" style="opacity: 0.5;">
+                                  <img class="img-portfolio img-responsive" src="img/twitter-logo.png" style="opacity: 0.5;">
                                   <div class="portfolio-box-caption">
                                       <div class="portfolio-box-caption-content">
                                           <div class="project-category text-faded">
