--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Marty J. Reynoldson" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <title>Marty Reynoldson</title>
-    <link rel="icon" href="img/me4.jpg">
+    <link rel="icon" href="assets/img/display-picture.jpg">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
@@ -22,20 +22,20 @@
         <h1 class="h1_home wow fadeIn" data-wow-delay="0.2s">Marty J. Reynoldson</h1>
         <h2 class="h2_heading wow fadeIn" data-wow-delay="0.4s">Software Engineer</h2>
         <div class="wow fadeIn" data-wow-delay="0.6s">
-          <img src="img/me4.jpg" class="img-circle"> 
+          <img src="assets/img/display-picture.jpg" class="img-circle"> 
         </div>
         <div class="wow fadeIn" data-wow-delay="0.8s" style="padding:30px 75px 50px 75px; font-size:20px;">
             <a href="https://www.linkedin.com/in/martyreynoldson" class="hvr-grow">
-              <img src="img/linkedin.png" title="LinkedIn" style="width:40px;height:40px;margin:5px">
+              <img src="assets/img/linkedin-bw-icon.png" title="LinkedIn" style="width:40px;height:40px;margin:5px">
             </a>
             <a href="assets/Marty_Reynoldson.pdf" class="hvr-grow">
-              <img src="img/resume.png" title="Resume" style="width:40px;height:40px;margin:5px">
+              <img src="assets/img/resume-bw-icon.png" title="Resume" style="width:40px;height:40px;margin:5px">
             </a>
             <a href="https://www.github.com/martyreynoldson" class="hvr-grow">
-              <img src="img/github_black.png" title="Github" style="width:40px;height:40px;margin:5px">
+              <img src="assets/img/github-bw-icon.png" title="Github" style="width:40px;height:40px;margin:5px">
             </a>
             <a href="https://www.facebook.com/mjreynoldson" class="hvr-grow">
-              <img src="img/facebook-icon-preview-1.png" title="Facebook" style="width:40px;height:40px;margin:5px">
+              <img src="assets/img/facebook-bw-icon.png" title="Facebook" style="width:40px;height:40px;margin:5px">
             </a>          
           </div>
       </div>
@@ -44,7 +44,7 @@
 
   <div class="col-xs-12 text-center abcen wow fadeIn" data-wow-delay="1.0s">
     <div class="button_down"> 
-      <a class="imgcircle wow bounceInUp" href="#about"> <img class="img_scroll" src="img/arrow_down.png" alt=""> </a>
+      <a class="imgcircle wow bounceInUp" href="#about"> <img class="img_scroll" src="assets/img/arrow_down.png" alt=""> </a>
     </div>
   </div>
 
@@ -70,7 +70,7 @@
          <div class="experience-area hvr-grow">     
             <div class="row wow fadeInLeft experience-section" data-wow-delay="0.4s">
                 <div class="col-md-5">
-                    <img src="img/rbs.jpg" style="width:405px; height:130; padding-top:20%" alt="">
+                    <img src="assets/img/rbs-logo.jpg" style="width:405px; height:130; padding-top:20%" alt="">
                 </div>
                 <div class="col-md-7 experience-description">
                     <h3>Royal Bank of Scotland (Aug 2015 - Present)</h3>
@@ -97,7 +97,7 @@
                     <p class="experience-text"><strong>Apple Watch App</strong> - Designed and implemented an Apple Watch application to leverage Centro8’s smarthome control and feedback capabilities.</p>
               </div>
               <div class="col-md-5">
-                  <img class="img experience-icon" src="img/demopad.png" alt="">
+                  <img class="img experience-icon" src="assets/img/demopad-logo.png" alt="">
               </div>
           </div>
         </div>
@@ -105,7 +105,7 @@
         <div class="experience-area hvr-grow">     
           <div class="row wow fadeInRight experience-section" data-wow-delay="0.4s">
               <div class="col-md-5">
-                  <img class="img" style="width:348px; height:165; padding-top:10%" src="img/kitchpack.png" alt="">
+                  <img class="img" style="width:348px; height:165; padding-top:10%" src="assets/img/kitchpack-logo.png" alt="">
               </div>
               <div class="col-md-7 experience-description">
                   <h3>KitchPack Ltd. (Aug 2014 - Sep 2014)</h3>
@@ -127,7 +127,7 @@ specific design and implementation needs.</p>
 reports based on the client’s customers’ Twitter activity e.g. tweets, retweets, followers etc.</p>
               </div>
               <div class="col-md-5">
-                  <img class="img experience-icon" src="img/infolab-lancaster-university.png" alt="">
+                  <img class="img experience-icon" src="assets/img/infolab21-logo.png" alt="">
               </div>
           </div>
         </div>
@@ -145,7 +145,7 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
                         <div class="col-md-6">
                           <div class="portfolio-box">
                               <a>
-                                  <img class="img-portfolio img-responsive" src="img/twitter-logo.png" style="opacity: 0.5;">
+                                  <img class="img-portfolio img-responsive" src="assets/img/twitter-logo.png" style="opacity: 0.5;">
                                   <div class="portfolio-box-caption">
                                       <div class="portfolio-box-caption-content">
                                           <div class="project-category text-faded">
@@ -164,7 +164,7 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
                       <div class="col-md-6">
                           <div class="portfolio-box">
                               <a>
-                                  <img class="img-portfolio img-responsive" src="img/scrapy.png" style="opacity: 0.5;">
+                                  <img class="img-portfolio img-responsive" src="assets/img/scrapy-logo.png" style="opacity: 0.5;">
                                   <div class="portfolio-box-caption">
                                       <div class="portfolio-box-caption-content">
                                           <div class="project-category text-faded">
@@ -193,62 +193,62 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
             <hr class="small">
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/csharp.png" class="hvr-grow tech" title="C#"> 
+                      <img src="assets/img/csharp-logo.png" class="hvr-grow tech" title="C#"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/angularjs.png" class="hvr-grow tech" title="AngularJS"> 
+                      <img src="assets/img/angularjs-logo.png" class="hvr-grow tech" title="AngularJS"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/nodejs.png" class="hvr-grow tech" title="NodeJS"> 
+                      <img src="assets/img/nodejs-logo.png" class="hvr-grow tech" title="NodeJS"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/java.png" class="hvr-grow tech" title="Java"> 
+                      <img src="assets/img/java-logo.png" class="hvr-grow tech" title="Java"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div width ="100">
-                      <img src="img/python.png" class="hvr-grow tech" title="Python"> 
+                      <img src="assets/img/python-logo.png" class="hvr-grow tech" title="Python"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/html.png" class="hvr-grow tech" title="HTML5"> 
+                      <img src="assets/img/html-logo.png" class="hvr-grow tech" title="HTML5"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/javascript.png" class="hvr-grow tech" title="JavaScript"> 
+                      <img src="assets/img/javascript-logo.png" class="hvr-grow tech" title="JavaScript"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/android.png" class="hvr-grow tech" title="Android"> 
+                      <img src="assets/img/android-logo.png" class="hvr-grow tech" title="Android"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/lua.png" class="hvr-grow tech" title="Lua"> 
+                      <img src="assets/img/lua-logo.png" class="hvr-grow tech" title="Lua"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/sql.png" class="hvr-grow tech" title="SQL"> 
+                      <img src="assets/img/sql-logo.png" class="hvr-grow tech" title="SQL"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/dotnet.png" class="hvr-grow tech" title=".NET"> 
+                      <img src="assets/img/dotnet-logo.png" class="hvr-grow tech" title=".NET"> 
                     </div>   
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <div>
-                      <img src="img/cakephp.png" class="hvr-grow tech" title="PHP"> 
+                      <img src="assets/img/cakephp-logo.png" class="hvr-grow tech" title="PHP"> 
                     </div>   
                 </div>
         </div>
@@ -278,12 +278,12 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
         <small>Marty Reynoldson &copy; 2017</small>
    </footer>
 </body>
-  <script src="js/jquery-1.10.2.js"></script>
-  <script src="js/wow.min.js"></script>
-  <script src="js/bootstrap.js"></script>
+  <script src="assets/js/jquery-1.10.2.js"></script>
+  <script src="assets/js/wow.min.js"></script>
+  <script src="assets/js/bootstrap.js"></script>
   <script>
    new WOW().init();
   </script>
-  <script src="js/particles.js"></script>
-  <script src="js/app.js"></script>
+  <script src="assets/js/particles.js"></script>
+  <script src="assets/js/app.js"></script>
 </html>
