Minor changes for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <br>
         <h1 class="h1_home wow fadeIn" data-wow-delay="0.2s">Marty J. Reynoldson</h1>
         <h2 class="h2_heading wow fadeIn" data-wow-delay="0.4s">Software Engineer</h2>
-        <div class="wow fadeIn" data-wow-delay="0.6s">
+        <div class="wow fadeIn display-picture-wrapper" data-wow-delay="0.6s">
           <img src="assets/img/display-picture.jpg" class="img-circle"> 
         </div>
         <div class="wow fadeIn" data-wow-delay="0.8s" style="padding:30px 75px 50px 75px; font-size:20px;">
@@ -69,10 +69,10 @@
 
          <div class="experience-area hvr-grow">     
             <div class="row wow fadeInLeft experience-section" data-wow-delay="0.4s">
-                <div class="col-md-5">
-                    <img src="assets/img/rbs-logo.jpg" style="width:405px; height:130; padding-top:20%" alt="">
+                <div class="col-md-5 col-sm-12">
+                    <img src="assets/img/rbs-logo.jpg" style="width:100%; height:auto; padding-top:20%" alt="">
                 </div>
-                <div class="col-md-7 experience-description">
+                <div class="col-md-7 col-sm-12 experience-description">
                     <h3>Royal Bank of Scotland (Aug 2015 - Present)</h3>
                     <p class="experience-text" style="text-align:center"><strong>Front-office software engineer for RBS's investment banking arm - NatWest Markets.</strong><p/>
                       <p class="experience-text">
@@ -89,25 +89,25 @@
 
         <div class="experience-area hvr-grow">     
           <div class="row wow fadeInRight experience-section" data-wow-delay="0.4s">
-              <div class="col-md-7 experience-description">
+              <div class="col-md-7 col-sm-12 experience-description">
                   <h3>DemoPad Ltd. (Jan 2015 - Mar 2015)</h3>
                   <p class="experience-text" style="text-align:center;">
                     <strong>Created software to extend DemoPad's smart home automation environment and capabilities.</strong>
                     <p class="experience-text"><strong>Device Drivers</strong> - Implemented device drivers in Lua to integrate lighting (Rako) and thermostat (Nest) control with DemoPad’s flagship smart home automation processor – Centro8.
                     <p class="experience-text"><strong>Apple Watch App</strong> - Designed and implemented an Apple Watch application to leverage Centro8’s smarthome control and feedback capabilities.</p>
               </div>
-              <div class="col-md-5">
-                  <img class="img experience-icon" src="assets/img/demopad-logo.png" alt="">
+              <div class="col-md-5 col-sm-12">
+                  <img class="img experience-icon" src="assets/img/demopad-logo.png" style="width:100%; height:auto;"alt="">
               </div>
           </div>
         </div>
 
         <div class="experience-area hvr-grow">     
           <div class="row wow fadeInRight experience-section" data-wow-delay="0.4s">
-              <div class="col-md-5">
-                  <img class="img" style="width:348px; height:165; padding-top:10%" src="assets/img/kitchpack-logo.png" alt="">
+              <div class="col-md-5 col-sm-12">
+                  <img class="img" style="width:100%; height:auto; padding-top:10%" src="assets/img/kitchpack-logo.png" alt="">
               </div>
-              <div class="col-md-7 experience-description">
+              <div class="col-md-7 col-sm-12 experience-description">
                   <h3>KitchPack Ltd. (Aug 2014 - Sep 2014)</h3>
                   <p class="experience-text" style="text-align:center"><strong>Provided technical expertise a company that sells household goods to University students</strong></p>
                   <p class="experience-text"><strong>Marketing Strategy</strong> - Discussed potential solutions with the owners to improve company awareness.</p>
@@ -118,7 +118,7 @@
 
         <div class="experience-area hvr-grow">     
           <div class="row wow fadeInLeft experience-section" data-wow-delay="0.4s">
-              <div class="col-md-7 experience-description">
+              <div class="col-md-7 col-sm-12 experience-description">
                   <h3>Lancaster University InfoLab21: Knowledge Business Centre (July 2014 - Sep 2014)</h3>
                   <p class="experience-text" style="text-align:center"><strong>EU-Funded project that promotes growth of small to medium-sized business NW-England.</strong></p>
                   <p class="experience-text"><strong>Consultation</strong> - Worked closely with clients to scope their requirements into manageable projects and meet
@@ -126,8 +126,8 @@ specific design and implementation needs.</p>
                   <p class="experience-text"><strong>Twitter Report Generator</strong> - Created a bespoke web application with PHP/Laravel. This generated progress
 reports based on the client’s customers’ Twitter activity e.g. tweets, retweets, followers etc.</p>
               </div>
-              <div class="col-md-5">
-                  <img class="img experience-icon" src="assets/img/infolab21-logo.png" alt="">
+              <div class="col-md-5 col-sm-12">
+                  <img class="img experience-icon" style="width:100%; height:auto;" src="assets/img/infolab21-logo.png" alt="">
               </div>
           </div>
         </div>
