--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="wow fadeIn display-picture-wrapper" data-wow-delay="0.6s">
         <img src="assets/img/display-picture.jpg" class="img-circle"> 
       </div>
-      <div class="wow fadeIn" data-wow-delay="0.8s" style="padding:10px 75px 50px 75px; font-size:20px;">
+      <div class="wow fadeIn" data-wow-delay="0.8s">
         <a href="https://www.linkedin.com/in/martyreynoldson" class="hvr-grow">
           <img class="contact-icon" src="assets/img/linkedin-bw-icon.png" title="LinkedIn">
         </a>
@@ -51,7 +51,16 @@
      <h2 class="h2_heading">About</h2>
      <hr class="small">
      <p style="font-size:26px">
-      Hi, my name is Marty and I live in London, England. In 2015, I graduated from Lancaster University with a Masters in Computer Science. Since then, I have been working as a software engineer at RBS. Specifically, I work in the fixed income space (front office) within RBS’s investment banking division – NatWest Markets.
+      Hi, my name is Marty and I live in London, England.</p>
+     <p style="font-size:26px">I am a software engineer at <a href="https://en.wikipedia.org/wiki/Royal_Bank_of_Scotland">RBS</a>.
+     </p>
+     <p style="font-size:20px">I worked in a <a href="http://www.investopedia.com/terms/f/frontoffice.asp"><strong><em>front office</em></strong> role</a> <a href="http://www.investopedia.com/terms/f/fixedincome.asp" style="font-size:16px">(fixed income)</a> within RBS's <a href="https://natwestmarkets.com/"><strong><em>investment banking</em></strong> division</a>.
+     </p>
+     <p style="font-size:20px"> 
+      In 2015, I graduated from <a href="http://www.lancaster.ac.uk/scc/">Lancaster University</a> with a Masters degree in Computer Science.
+     </p>
+     <p style="font-size:20px"> 
+      I have a strong background in software engineering, web development and technical business consultation.
      </p>
     </div>
     <br><br>
@@ -77,7 +86,7 @@
                 <strong>Syndicate Dashboard</strong> - Used AngularJS, NodeJS and C# to migrate legacy solutions into a single web-based application. This application hosts primary markets deal-related information and documentation.
                 </p>
                 <p class="experience-text">
-                <strong>Investor Feed</strong> - Implemented a Windows Service that communicates with various internal systems and uses object comparisons to synchronize golden source counterparty static with RBS’s ‘book building’ application.
+                <strong>Investor Feed</strong> - Implemented a Windows Service that communicates with various internal systems and uses object comparisons to synchronize golden source counterparty static with RBS’s ‘<a href="http://www.investopedia.com/terms/b/bookbuilding.asp"><em>book building</em></a>’ application.
                 </p>
                 <p class="experience-text">
                 <strong>Deal Monitor</strong> - Created a C# Excel add-in solution that verifies impartial bond allocation, flags orders that break selling restrictions and processes sales credits based on performance.
@@ -92,7 +101,7 @@
             <h3>DemoPad Ltd. (Jan 2015 - Mar 2015)</h3>
             <p class="experience-text" style="text-align:center;">
             <strong>Created software to extend DemoPad's smart home automation environment and capabilities.</strong>
-            <p class="experience-text"><strong>Device Drivers</strong> - Implemented device drivers in Lua to integrate lighting (Rako) and thermostat (Nest) control with DemoPad’s flagship smart home automation processor – Centro8.
+            <p class="experience-text"><strong>Device Drivers</strong> - Implemented device drivers in Lua to integrate lighting (<a href="https://www.rakocontrols.com/">Rako</a>) and thermostat (<a href="https://store.nest.com/uk/product/thermostat?selectedVariantId=T3010GBBI">Nest</a>) control with DemoPad’s flagship smart home automation processor – Centro8.
             </p>
             <p class="experience-text"><strong>Apple Watch App</strong> - Designed and implemented an Apple Watch application to leverage Centro8’s smarthome control and feedback capabilities.
             </p>
@@ -120,7 +129,7 @@
    <div class="experience-area hvr-grow">     
     <div class="row wow fadeInLeft experience-section" data-wow-delay="0.4s">
         <div class="col-md-7 col-sm-12 experience-description">
-          <h3>Lancaster University InfoLab21: Knowledge Business Centre (July 2014 - Sep 2014)</h3>
+          <h3><a href="http://www.infolab21.lancs.ac.uk/about/kbc/graduate_academy.php">Lancaster University InfoLab21: Knowledge Business Centre (July 2014 - Sep 2014)</a></h3>
           <p class="experience-text" style="text-align:center"><strong>EU-Funded project that promotes growth of small to medium-sized business NW-England.</strong></p>
           <p class="experience-text"><strong>Consultation</strong> - Worked closely with clients to scope their requirements into manageable projects and meet
 specific design and implementation needs.</p>
@@ -223,10 +232,11 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
   </section>
 
   <footer id="footer">
-               <br><br>
+  <br><br>
   <div class="container wow fadeInUp"  data-wow-delay="0.2s">
    <h2 class="h2_heading">Contact Me</h2><br>
-   <p style="font-size:26px">You can reach me at<br> 
+   <hr>
+   <p style="font-size:22px">You can reach me at<br> 
     <a href="mailto:martyreynoldson@gmail.com" style="color:white"><strong>martyreynoldson@gmail.com</strong></a>!
    </p>
     <a class="body-text" href="https://www.linkedin.com/in/martyreynoldson" style="color:white;">
