--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
       Hi, my name is Marty and I live in London, England.</p>
      <p style="font-size:26px">I am a software engineer at <a href="https://en.wikipedia.org/wiki/Royal_Bank_of_Scotland">RBS</a>.
      </p>
-     <p style="font-size:20px">I worked in a <a href="http://www.investopedia.com/terms/f/frontoffice.asp"><strong><em>front office</em></strong> role</a> <a href="http://www.investopedia.com/terms/f/fixedincome.asp" style="font-size:16px">(fixed income)</a> within RBS's <a href="https://natwestmarkets.com/"><strong><em>investment banking</em></strong> division</a>.
+     <p style="font-size:20px">I work in a <a href="http://www.investopedia.com/terms/f/frontoffice.asp"><strong><em>front office</em></strong> role</a> <a href="http://www.investopedia.com/terms/f/fixedincome.asp" style="font-size:16px">(fixed income)</a> within RBS's <a href="https://natwestmarkets.com/"><strong><em>investment banking</em></strong> division</a>.
      </p>
      <p style="font-size:20px"> 
       In 2015, I graduated from <a href="http://www.lancaster.ac.uk/scc/">Lancaster University</a> with a Masters degree in Computer Science.
      </p>
      <p style="font-size:20px"> 
-      I have a strong background in software engineering, web development and technical business consultation.
+      I have a strong background in software engineering, web development and business consultation.
      </p>
     </div>
     <br><br>
