Minor text fixes
Fix resume link in footer
Fix Kitchpack description

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
         <div class="col-md-7 col-sm-12 experience-description">
             <h3>KitchPack Ltd. (Aug 2014 - Sep 2014)</h3>
-            <p class="experience-text" style="text-align:center"><strong>Provided technical expertise a company that sells household goods to University students</strong></p>
+            <p class="experience-text" style="text-align:center"><strong>Provided technical expertise to a company that sells household goods to University students</strong></p>
             <p class="experience-text"><strong>Marketing Strategy</strong> - Discussed potential solutions with the owners to improve company awareness.</p>
             <p class="experience-text"><strong>Web Scraping</strong> - Used Scrapy/Python scripts to accomplish the agreed marketing strategy. Implementation saw sales increase by 35% over the first month and a noticeable increase in feedback via social media.</p>
         </div>
@@ -242,7 +242,7 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
     <a class="body-text" href="https://www.linkedin.com/in/martyreynoldson" style="color:white;">
       LinkedIn |
     </a>
-    <a class="body-text" href="marty_reynoldson.pdf" style="color:white">
+    <a class="body-text" href="Marty_Reynoldson.pdf" style="color:white">
       Resume |
     </a>
     <a class="body-text" href="https://www.github.com/martyreynoldson" style="color:white">
