Fix dead resume link
Resume moved to assets folder

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
     <a class="body-text" href="https://www.linkedin.com/in/martyreynoldson" style="color:white;">
       LinkedIn |
     </a>
-    <a class="body-text" href="Marty_Reynoldson.pdf" style="color:white">
+    <a class="body-text" href="assets/Marty_Reynoldson.pdf" style="color:white">
       Resume |
     </a>
     <a class="body-text" href="https://www.github.com/martyreynoldson" style="color:white">
